--- a/advent2017.cabal
+++ b/advent2017.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 7e432be15568af3c82c57804174abe721e6de653533c5f7423aade097131ebe3
+-- hash: f175c4a5039f4b14c38cfc934f270b515133b84ab8cbbe453865b9ebf6b6bf03
 
 name:           advent2017
 version:        0.1.0.0
@@ -71,6 +71,7 @@ library
     , sort
     , split
     , strings >=1.1
+    , text >=1.2.4.0
     , utf8-string
   default-language: Haskell2010
 
@@ -95,6 +96,7 @@ executable advent2017-exe
     , sort
     , split
     , strings >=1.1
+    , text >=1.2.4.0
     , utf8-string
   default-language: Haskell2010
 
@@ -121,5 +123,6 @@ test-suite advent2017-test
     , sort
     , split
     , strings >=1.1
+    , text >=1.2.4.0
     , utf8-string
   default-language: Haskell2010
